# c_prog

./: README.md  build_remove.sh
Arrays/: CMakeLists.txt  check_sparse_matrix.c  matrix_multiplication.c  merge_sorted_arrays.c  remove_repeats.c  two_arrays_common.c
Compilation/: CMakeLists.txt  assertions_validation.c  compile_time_assertions.c  conditional_compilation.c  null_assert.c  stringize_token_paste.c
Concurrency/: CMakeLists.txt  multiple_threads.c  mutex.c  mutex_stack.c  single_thread.c  stack.c  stack.h
DataStructures/: CMakeLists.txt  two_way_linked_list.c
Files/: CMakeLists.txt  caesar_code.c  count_vowels.c  read_and_convert.c  reverse_file.c  sample2.txt  sample_text.txt  word_replace.c
Func/: CMakeLists.txt  bin_to_hex.c  check_armstrong_number.c  palindrome_number.c  recursive_gcd.c
LowLevel/: CMakeLists.txt  bin_to_dec.c  build.sh  dec_to_bin.c  dec_to_bin_mask.c  inline_assemble_division.c  inline_assemble_multiply.c
MySQL/: CMakeLists.txt  delete.c  display_all_tables.c  insert_into_table.c  search.c  update.c
Networking/: CMakeLists.txt  child_parent_pipe.c  single_process_read_write.c
Networking/fifo/: fiforead.c  fifowrite.c
Pointers/: CMakeLists.txt  find_max.c  matrix_transpose.c  reverse_string.c  sort_one_way_list.c
Strings/: CMakeLists.txt  character_counter.c  count_vowels_consonants.c  first_repetition.c  palindrome.c  vowels_to_upper.c
Utils/: CMakeLists.txt  atexit.c  clock.c
